--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -15,7 +15,7 @@
 
     <table id="id_list_table">
       <tr>
-        <td>{{ new_item_text }}</td>
+        <tr><td>1: {{ new_item_text }}</td></tr>  
       </tr>
     </table>
   </body>
