--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -14,9 +14,11 @@
     </form>
 
     <table id="id_list_table">
+      {% for item in items %}
       <tr>
-        <tr><td>1: {{ new_item_text }}</td></tr>  
+        <td>1: {{ item.text }}</td>
       </tr>
+      {% endfor %}
     </table>
   </body>
 </html>
